# xword-puz

./: .gitignore  Cargo.toml  README.md
scripts/: build.sh  publish.sh
src/: generate_ipuz.rs  generate_puz.rs  lib.rs  main.rs  multi_error.rs  parse_grid.rs  serde_lit.rs  validation.rs
src/test_files/: Ups and Downs.ipuz  encoding_oracle.puz  smol.puz
www/: index.html  index.js  style.css
