[package]
name = "img2puz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.1", optional = true }
encoding_rs = "0.8.31"
image = "0.24.5"
packed_struct = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
