[package]
name = "xword-puz"
version = "0.1.3"
edition = "2021"
description = "Rust wasm library for generating `.puz` crossword files."
repository = "https://github.com/orez-/xword-puz"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
encoding_rs = "0.8.31"
packed_struct = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
wasm-bindgen = "0.2"
